--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Header</title>
 </head>
+
 <body>
     <div th:fragment="header">
-        This is the header
+        <div id="header-left">
+            <img src="/images/logo-header.png" id="header-logo" alt="Webinar Resorts logo" />
+        </div>
+        <div id="header-right">
+
+        </div>
+
     </div>
-    
+
 </body>
+
 </html>
