--- a/src/main/resources/templates/layouts/content.html
+++ b/src/main/resources/templates/layouts/content.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0 /">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Content</title>
+    <link rel="stylesheet" type="text/css" href="/css/main.css" />
 </head>
+
 <body>
-    <header>
-        <div th:replace="fragments/header :: header"></div>
-    </header>
-    <main>
-        <div layout:fragment="content">
-            <p>Content goes here...</p>
-        </div>
-    </main>
+    <div id="wrapper">
+        <header>
+            <div th:replace="fragments/header :: header"></div>
+        </header>
+        <nav>
+            <div th:replace="fragments/menu :: menu"></div>
+        </nav>
+        <main>
+            <div layout:fragment="content">
+                <p>Content goes here...</p>
+            </div>
+        </main>
 
-    <footer>
-        <div th:replace="fragments/footer :: footer"></div>
-    </footer>
+        <footer>
+            <div th:replace="fragments/footer :: footer"></div>
+        </footer>
+    </div>
 
+    <script src="/js/navigation.js"></script>    
 </body>
+
 </html>
