--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
 <body>
     <div th:fragment="header">
         <div id="header-left">
-            <img src="/images/logo-header.png" id="header-logo" alt="Webinar Resorts logo" />
+            <a th:href="@{/}"><img src="/images/logo-header.png" id="header-logo" alt="Webinar Resorts logo" /></a>
         </div>
         <div id="header-right">
 
