--- a/src/main/resources/templates/layouts/content.html
+++ b/src/main/resources/templates/layouts/content.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Content</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
 </head>
 
 <body>
@@ -28,7 +29,8 @@
         </footer>
     </div>
 
-    <script src="/js/navigation.js"></script>    
+    <script src="/js/navigation.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>    
 </body>
 
 </html>
