Datepickers added to Reservation form

--- a/src/main/resources/templates/content/reservation/reservation.html
+++ b/src/main/resources/templates/content/reservation/reservation.html
@@ -18,13 +18,13 @@
 
       <div class="input-group">
         <label>Start Date:</label>
-        <input name="fromDate" type="date" />
+        <input name="fromDate" id="fromDate" type="text" />
       </div>
 
       <div class="input-group">
 
         <label>End Date:</label>
-        <input name="toDate" type="date" />
+        <input name="toDate" id="toDate" type="text" />
       </div>
 
       <div class="input-group">
@@ -44,7 +44,6 @@
       <span id="reservationId" />.
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="/js/reservation.js"></script>
 
   </div>
