--- a/src/main/resources/templates/layouts/content.html
+++ b/src/main/resources/templates/layouts/content.html
@@ -8,6 +8,9 @@
     <title>Content</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css" />
     <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>    
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>    
 </head>
 
 <body>
@@ -28,6 +31,7 @@
             <div th:replace="fragments/footer :: footer"></div>
         </footer>
     </div>
+
 
     <script src="/js/navigation.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>    
