--- a/src/main/resources/templates/content/reservation/reservation.html
+++ b/src/main/resources/templates/content/reservation/reservation.html
@@ -13,7 +13,7 @@
     <form id="reservationForm">
       <div class="input-group">
         <label>Facility ID:</label>
-        <input name="resourceId" type="input" />
+        <input name="resourceId" id="resourceId" type="text" />
       </div>
 
       <div class="input-group">
@@ -29,20 +29,11 @@
 
       <div class="input-group">
         <label>Reserved By:</label>
-        <input name="owner" type="input" size="64" />
+        <input name="owner" id="owner" type="text" size="64" />
       </div>
 
-      <button id="submitReservation">Place Reservation</button>
-
-      <div id="validation-error" class="message">Reservation failed - please check your input for completeness.</div>
-      <div id="conflict-error" class="message">The room is already reserved for this period, please choose a different period.</div>
-      <div id="system-error" class="message">Reservation failed - please try again later.</div>
+      <button type="submit">Place Reservation</button>
     </form>
-
-    <div id="reservation-successful-message" class="message">
-      Your reservation has been successfully processed. Your reservation id is:
-      <span id="reservationId" />.
-    </div>
 
     <script src="/js/reservation.js"></script>
 
