Footer text made more general and center aligned

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div th:fragment="footer">
-        Gábor Danis - 2017 
+        Webinar Reservations Inc. - 2017 
     </div>
 
 </body>
